# health

./: .gitignore  README.md  app.py  git_push.py  main.py  models.py  pdf_generator.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: billing.js  claim.js  crypto.js  dashboard.js  payment.js
templates/: base.html  claim_form.html  dashboard.html  index.html
