[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-mail>=0.10.0",
    "web3>=7.4.0",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0.post0",
    "stripe>=11.2.0",
    "sqlalchemy>=2.0.36",
    "reportlab>=4.2.5",
]
